# matchy-meetups-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: config.rs  create_pairing.rs  discord_helpers.rs  helpers.rs  main.rs  matching.rs  pair.rs  send_pairing.rs  types.rs
