[package]
name = "matchy_meetups_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = { version = "=0.12.1" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
itertools = "0.13.0"
anyhow = "1.0.91"
regex = "1.11.0"
chrono = "0.4.38"
petgraph = "0.7.1"
